--- a/INTRO CSS/12.CSSObject.html
+++ b/INTRO CSS/12.CSSObject.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,14 +11,18 @@
         margin: 0px;
         padding: 0px;
     }
+
     img {
         width: 300px;
         height: 400px;
-        object-fit:scale-down;
+        object-fit: scale-down;
         object-position: center;
     }
 </style>
+
 <body>
-    <img src="https://images.pexels.com/photos/1659438/pexels-photo-1659438.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
+    <img src="https://images.pexels.com/photos/1659438/pexels-photo-1659438.jpeg?auto=compress&cs=tinysrgb&w=600"
+        alt="">
 </body>
+
 </html>
