added-images-button

--- a/HTML/Attributeselector.html
+++ b/HTML/Attributeselector.html
@@ -20,10 +20,10 @@
     <a href="#">Internal 1</a>
     <a href="https://www.Youtube.com">Youtube</a> 
     <a href="#"> Internal 2</a>
-    <a href="https://www.google.com" style="color: aquamarine;" >google</a>   
+    <a href="https://www.google.com">google</a>   
 
-    <input type="email" name="" id="">
-    <input type="text">
-    <input type="password" name="" id="">
+    <input type="email" name="" id="" placeholder="Email">
+    <input type="text" placeholder="Text">
+    <input type="password" name="" id="" placeholder="password">
 </body>
 </html>
